--- a/netlify.toml
+++ b/netlify.toml
@@ -5,10 +5,11 @@
 [build.environment]
   NODE_VERSION = "18"
 
+# Only handle 404s, not all routes
 [[redirects]]
   from = "/*"
-  to = "/index.html"
-  status = 200
+  to = "/404.html"
+  status = 404
 
 [[headers]]
   for = "/*"
